force-app/main/default/objects/Charket__Survey__c/Charket__Survey__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>