force-app/main/default/objects/Charket__Survey__c/fields/Charket__ButtonSettings__c.field-meta.xml
<CustomField>
    <fullName>Charket__ButtonSettings__c</fullName>
    <label>Button Settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>