force-app/main/default/objects/Charket__Survey__c/fields/Charket__RuleSettings__c.field-meta.xml
<CustomField>
    <fullName>Charket__RuleSettings__c</fullName>
    <label>Rule Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>