force-app/main/default/objects/Charket__Survey__c/fields/Charket__Version__c.field-meta.xml
<CustomField>
    <fullName>Charket__Version__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Version</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>